overflow correction

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@
 body {
     min-height: 100vh;
     width: 100vw;
-    overflow: hidden;
     max-width: 1440px;
     margin: 0;
 }
